<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.CreateTrackFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/albumImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_album_cover"
                android:scaleType="centerCrop"
                tools:src="@drawable/gradient_album_cover"/>

            <TextView
                android:id="@+id/albumTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album_title"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:gravity="center|bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/formConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerConstraintLayout" >

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trackNameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trackNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:hint="@string/track_name_field"
                    android:maxLength="50"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:textSize="20sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/trackNameTextField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/verticalGuide"
                style="@style/Widget.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/minutesDurationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:hint="Minutos"
                    android:maxLength="2"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/secondsDurationTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/secondaryTextColor"
                app:layout_constraintTop_toBottomOf="@+id/trackNameTextField"
                app:layout_constraintStart_toStartOf="@id/verticalGuide"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/secondsDurationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:hint="Segundos"
                    android:maxLength="2"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:textSize="20sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_styled"
                android:text="@string/text_save_button"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/secondsDurationTextField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>