...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_height="wrap_content"
        android:background="@drawable/button_styled"
        android:text="@string/inicio_button_visitante"
        android:textColor="#424242"
        android:radius="10dp"
        android:layout_width="200dp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
...
